--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,7 @@ project(":core") {
         api "com.badlogicgames.ashley:ashley:$ashleyVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
+        implementation 'org.mongodb:mongo-java-driver:3.12.14'
         
     }
 }
