--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,7 @@ android {
     defaultConfig {
         applicationId "com.mygdx.game"
         minSdkVersion 16
+        multiDexEnabled = true
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
